--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,13 +23,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -e ".[dev]"
 
-    - name: Run pre-commit hooks
-      run: |
-        pre-commit run --all-files
-
     - name: Lint with ruff
       run: |
         ruff check src/stilt
+      continue-on-error: true
 
     - name: Type checking with pyright
       run: |
