--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Run tests with pytest
       run: |
-        pytest --cov=stilt --cov-report=xml
+        pytest --cov=stilt --cov-report=xml --junitxml=junit.xml -o junit_family=legacy
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v5
@@ -38,3 +38,9 @@ jobs:
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
         fail_ci_if_error: false
+    
+    - name: Upload test results to Codecov
+      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.10' && !cancelled()
+      uses: codecov/test-results-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
