--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Run tests with pytest
       run: |
-        pytest --cov=stilt -junitxml=junit.xml -o junit_family=legacy
+        pytest --cov=stilt --junitxml=junit.xml -o junit_family=legacy
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v5
