--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,20 +29,17 @@ jobs:
 
     - name: Run tests with pytest
       run: |
-        pytest -v
-
-    - name: Run coverage
-      run: |
-        pytest --cov --junitxml=junit.xml -o junit_family=legacy
+        pytest -v --cov --junitxml=junit.xml -o junit_family=legacy
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v5
-      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.10'  && !cancelled()
+      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.10'  &&  {{ !cancelled() }}
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
 
     - name: Upload test results to Codecov
-      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.10' && !cancelled()
+      if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.10' && {{ !cancelled() }}
       uses: codecov/test-results-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
+        verbose: true
